--- a/client/src/assets/lang/core.lang_en.json
+++ b/client/src/assets/lang/core.lang_en.json
@@ -2,5 +2,9 @@
     "core": {
         "core": "Core",
         "hello": "Hello"
+    },
+    "users": {
+        "users": "Users",
+        "yo": "Yo!"
     }
 }
